--- a/index.html
+++ b/index.html
@@ -19,24 +19,31 @@
     <h1>Escopo</h1>
 
     <form name="isForm" novalidate>
+
       <div class="input-field">
+
         <input
           type="text"
           class="validate"
-          id="nome"
-          name="nome"
-          ng-model="inputs.nome"
+          id="name"
+          name="name"
+          ng-model="user.name"
           floating-label="Digite seu nome aqui"
           character-counter="10"
           ng-maxlength="10"
           ng-required="true"/>
 
-        <div class="field-hint" ng-messages="isForm.nome.$error" ng-show="isForm.nome.$dirty">
+        <div class="field-hint" ng-messages="isForm.name.$error" ng-show="isForm.name.$dirty">
           <div ng-message="required">Este campo é obrigatório!</div>
           <div ng-message="maxlength">Você não pode exceder 10 caracteres.</div>
         </div> <!-- .field-hint -->
+        
+      </div> <!-- .input-field -->
 
-      </div>
+      <button class="btn waves-effect green waves-light" type="submit" name="action">Abrir Modal
+        <i class="material-icons right">send</i>
+      </button>
+
     </form>
 
   </div> <!-- .container -->
