--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container" ng-controller="ContainerCtrl as $ctrl">
     <h1>Escopo</h1>
 
     <form name="isForm" novalidate>
@@ -27,7 +27,7 @@
           class="validate"
           id="name"
           name="name"
-          ng-model="user.name"
+          ng-model="$ctrl.user.name"
           floating-label="Digite seu nome aqui"
           character-counter="10"
           ng-maxlength="10"
@@ -40,7 +40,7 @@
         
       </div> <!-- .input-field -->
 
-      <button class="btn waves-effect green waves-light" type="submit" name="action">Abrir Modal
+      <button ng-click="$ctrl.openModal()" class="btn waves-effect green waves-light" type="submit" name="action">Abrir Modal
         <i class="material-icons right">send</i>
       </button>
 
