--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 <body ng-app="app">
 
-  <nav class="green">
+  <nav class="light-blue">
     <div class="nav-wrapper">
       <a href="#" class="brand-logo center">IS</a>
     </div>
   </nav>
 
   <div class="container" ng-controller="ContainerCtrl as $ctrl">
-    <h1>Escopo</h1>
+    <h1 class="center">GO</h1>
 
     <form name="isForm" novalidate>
 
@@ -40,7 +40,7 @@
         
       </div> <!-- .input-field -->
 
-      <button ng-click="$ctrl.openModal()" class="btn waves-effect green waves-light" type="submit" name="action">Abrir Modal
+      <button ng-click="$ctrl.openModal()" class="btn waves-effect light-blue waves-light" type="submit" name="action">Abrir Modal
         <i class="material-icons right">send</i>
       </button>
 
